tests/ui/iterators/fold-iterator-error-23966.stderr
error[E0277]: expected a `FnMut(_, char)` closure, found `()`
  --> $DIR/fold-iterator-error-23966.rs:3:32
   |
LL |     "".chars().fold(|_, _| (), ());
   |                ----            ^^ expected an `FnMut(_, char)` closure, found `()`
   |                |
   |                required by a bound introduced by this call
   |
   = help: the trait `FnMut(_, char)` is not implemented for `()`
note: required by a bound in `fold`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
