tests/ui/iterators/fold-iterator-error-23966.rs
// https://github.com/rust-lang/rust/issues/23966
fn main() {
    "".chars().fold(|_, _| (), ());
    //~^ ERROR E0277
}
